Refactoring forms and buttons

--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -12,7 +12,7 @@
 .info_left-num {
   font-family: var(--third-font);
   font-size: 20px;
-  color: var(--color-primary);
+  color: var(--default-color);
 }
 
 .info_bottom {
