--- a/src/layout/pages-footer/pages-footer.scss
+++ b/src/layout/pages-footer/pages-footer.scss
@@ -52,7 +52,7 @@
   font-size: 12px;
   text-transform: uppercase;
   line-height: 15px;
-  color: rgba(var(--color-primary), var(--opasity-075));
+  color: rgba(var(--default-color), var(--opasity-075));
   font-family: var(--second-font);
 }
 //.footer-subscribe {
@@ -68,7 +68,7 @@
 //  text-align: center;
 //}
 //.ui-header--subs {
-//  color: rgba(var(--color-primary), var(--opasity-075));
+//  color: rgba(var(--default-color), var(--opasity-075));
 //  font-family: var(--second-font);
 //  text-align: center;
 //}
@@ -129,7 +129,7 @@
 //  color: rgba(31, 32, 65, 0.5);
 //}
 //.ui-header-nav-link-first {
-//  color: rgba(var(--color-primary), var(--opasity-075));
+//  color: rgba(var(--default-color), var(--opasity-075));
 //  font-family: var(--second-font);
 //}
 //.footer-subscribe {
@@ -145,7 +145,7 @@
 //  text-align: center;
 //}
 //.ui-header--subs {
-//  color: rgba(var(--color-primary), var(--opasity-075));
+//  color: rgba(var(--default-color), var(--opasity-075));
 //  font-family: var(--second-font);
 //  text-align: center;
 //}
