--- a/src/layout/registration-form/registration-form.pug
+++ b/src/layout/registration-form/registration-form.pug
@@ -5,7 +5,7 @@ include ../../blocks/button/button
 
 
 form.form(method='post' name='singhup' id='singhup')
-  h1.form-title  Регистрация аккаунта
+  h1  Регистрация аккаунта
   .form-wrapper10
     +input-field({placeholder: 'Имя', type: 'text'})
   .form-wrapper10
