--- a/src/layout/search-form/search-form.pug
+++ b/src/layout/search-form/search-form.pug
@@ -2,7 +2,7 @@ include ../../blocks/input/input
 include ../../blocks/button/button
 
 form.form(action="#", method="post")
-  h1.form-title Найдём номера под ваши пожелания
+  h1 Найдём номера под ваши пожелания
   div.dinamic-calendar
     div.search-form-input-wrapper
       label(class="form-label" for="#calendar1") Прибытие
