--- a/src/layout/singin/singin.pug
+++ b/src/layout/singin/singin.pug
@@ -4,7 +4,7 @@ include ../../blocks/toggle/toggle
 include ../../blocks/button/button
 form.form(method='post' name='singhup' id='singhup')
   .form-wrapper20
-    h1.form-title  Войти
+    h1  Войти
   .form-wrapper10
     +input-field({placeholder: 'Email', type: 'email'})
   .form-wrapper20
