--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,6 +1,6 @@
 .index-page {
   margin-top: 6vh;
-  background-color: rgba(var(--color-primary), var(--opasity-005));
+  background-color: rgba(var(--default-color), var(--opasity-005));
 }
 
 .index-nav {
