--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -2,7 +2,7 @@
 .button {
   display: block;
   width: 100%;
-  border-radius: 1.375rem;
+  border-radius: 22px;
   text-transform: uppercase;
   font-size: var(--text-xs);
   font-family: var(--second-font);
@@ -12,6 +12,14 @@
   padding: 1em;
   border-color: transparent;
 
+  &_theme-text {
+    color: var(--purple);
+  }
+  &_theme-text:hover,
+  &_theme-text:focus {
+    color: var(--default-color);
+    opacity: var(--opasity-05);
+  }
   &_theme-main {
     background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     color: var(--white);
@@ -25,7 +33,6 @@
       rgba(55%, 64%, 98%, 0.5) 100%
     );
   }
-
   &_theme-secondary {
     background-color: var(--white);
     color: var(--purple);
@@ -35,11 +42,12 @@
     @extend .button;
   }
 }
+
 .rounded-corners-gradient-borders {
   display: block;
   width: 100%;
   border: double 2px transparent;
-  border-radius: 1.375rem;
+  border-radius: 22px;
   background-image: linear-gradient(white, white),
     radial-gradient(circle at top left, var(--purple), var(--blue));
   background-origin: border-box;
