--- a/src/layout/headers/ui-header/ui-header.scss
+++ b/src/layout/headers/ui-header/ui-header.scss
@@ -4,7 +4,7 @@
   padding: 0.75rem 0;
   min-width: 100%;
   background-color: var(--white);
-  box-shadow: 0px 10px 20px rgba(var(--color-primary), var(--opasity-005));
+  box-shadow: 0px 10px 20px rgba(var(--default-color), var(--opasity-005));
 }
 
 .ui-header {
@@ -42,7 +42,7 @@
   }
 
   .ui-header-nav-link {
-    color: rgba(var(--color-primary), var(--opasity-05));
+    color: rgba(var(--default-color), var(--opasity-05));
     //font-size: 0.875rem;
     font-size: 13.9px;
     line-height: 17px;
@@ -57,7 +57,7 @@
 }
 
 .ui-header-nav-link.first {
-  color: rgba(var(--color-primary), var(--opasity-075));
+  color: rgba(var(--default-color), var(--opasity-075));
   font-family: var(--second-font);
   //font-weight: bold;
 }
