--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -6,97 +6,143 @@ include ../../blocks/like-button/like-button
 include ../../blocks/input/input
 include ../../blocks/info/info
 include ../../layout/comment/comment
+include ../../blocks/button/button
 block variables
  - let pageClass = 'form-elements';
 
 block content
- .form-elements-container
   .form-elements-text-wrapper
-   .title
-    span.text-field-left-title text field
-    span.text-field-right-title default
-   +input-field({placeholder: 'Email'})
-   .title
-    span.text-field-left-title text field
-    span.text-field-right-title hover/focus
-   +input-field({placeholder: 'This is pretty awesome'})
-   .title
-    span.text-field-left-title dropdaun
-    span.text-field-right-title default
-   include ../../layout/dropdown/dropdown
-   .title
-    span.text-field-left-title masked text field
-    span.text-field-right-title default
-   +input-field({placeholder:'дд.мм.гггг', mods:'date'})
+    .form-wrapper20
+      .form-flex-row
+        label.form-label(for='one') text field
+        span.state-description default
+      +input-field({placeholder: 'Email', id: 'one'})
+    .form-wrapper20
+      .form-flex-row
+        label.form-label(for='two') text field
+        span.state-description hover / focus
+      +input-field({placeholder: 'This is pretty awesome', id: 'two'})
+    .form-wrapper20
+      .form-flex-row
+        label.form-label(for='three') dropdaun
+        span.state-description default
+      include ../../layout/dropdown/dropdown
+    .form-wrapper30
+      .form-flex-row
+        label.form-label(for='fourth') masked text field
+        span.state-description default
+      +input-field({placeholder: 'дд.мм.гггг', mods: 'date', id: 'fourth'})
+    .form-wrapper20
+      div.dinamic-calendar
+        div.search-form-input-wrapper
+          label(class="form-label" for="#calendar1") date Dropdown
+          +input-field({
+            type: 'text',
+            placeholder: 'дд.мм.гггг',
+            mods: 'calendar-one',
+            id: "calendar1"
+          })
+        div.search-form-input-wrapper
+          label(class="form-label" for="#calendar2") date Dropdown
+          +input-field({
+            type: 'text',
+            placeholder: 'дд.мм.гггг',
+            mods: 'calendar-two',
+            id: "calendar2"
+          })
+    .form-wrapper20
+      label.form-label(for='eight') filter date dropdown
+      +input-field({placeholder: '18авг-23авг', mods: 'date', id: 'eight'})
 
-   .title
-    span.text-field-left-title subscription text-field
-   +input-field({placeholder: 'Email'})
-   .title
-    span.text-field-left-title dropdaun
-    span.text-field-right-title default
-   include ../../layout/dropdown/dropdown
-   .title
-    span.text-field-left-title dropdaun
-    span.text-field-right-title expanded
-   include ../../layout/dropdown/dropdown
-   include ../../layout/checkbox-list/checkbox-list
-   include ../../layout/checkbox-list/checkbox-list
-   div.cons
-    each item in [{righthead: 'mood', tophead:'Комфорт',bottomtext:'Шумопоглощающие стены'},{righthead: 'domain', tophead:'Удобство',bottomhead:'Окно в каждой спальне'},]
-     +icon-info( item )
+    .form-wrapper20
+      label.form-label(for='fifth') subscription text-field
+      +input-field({placeholder: 'Email', id: 'fifth'})
+    .form-wrapper20
+      .form-flex-row
+        label.form-label(for='six') dropdown
+        span.state-description default
+      include ../../layout/dropdown/dropdown
+    .form-wrapper20
+      .form-flex-row
+        label.form-label(for='seven') dropdown
+        span.state-description expanded
+      include ../../layout/dropdown/dropdown
+    include ../../layout/checkbox-list/checkbox-list
+    include ../../layout/checkbox-list/checkbox-list
+    div.cons
+      each item in [{righthead: 'mood', tophead:'Комфорт',bottomtext:'Шумопоглощающие стены'},{righthead: 'domain', tophead:'Удобство',bottomhead:'Окно в каждой спальне'},]
+        +icon-info( item )
 
 
   .form-elements-toggle-wrapper
-   .checkbox-wrapper
-    h1 checkbox buttons
-    +checkbox('Можно курить')
-    +checkbox('Можно с питтомцами')
-    +checkbox('Можно пригласить гостей (до 10 человек)')
-   .radio-buttons-wrapper
-    h1 radio buttons
-    +radio-buttons({
-      labelTitle: 'RADIO BUTTONS',
-      radioButtonsSet: 'radio-buttons-test',
-      buttonsList: [
-        {
-          buttonTitle: 'Мужчина',
-          buttonValue: '1',
-          checked: true
-        },
-        {
-          buttonTitle: 'Женщина',
-          buttonValue: '2'
-        }
-      ]
-    })
-   .toggle-wrapper
-    h1 toggle
-    +toggle('Получать спецпредложения')
-    +toggle('Получать спецпредложения')
-   .like-wrapper
-    h1 like button
-    .lw
-     +like-button({
-       num: '2'
-     })
-     +like-button({
-       num: '12'
-     })
-   .rate-wrapper
-    h1 rate button
-    .rw
-     include ../../blocks/rate/rate
-     include ../../blocks/rate/rate
+    .form-grid-column-10
+      .form-wrapper5
+        span.input-groop-title checkbox buttons
+      +checkbox('Можно курить')
+      +checkbox('Можно с питтомцами')
+      +checkbox('Можно пригласить гостей (до 10 человек)')
+    .form-grid-column-10
+      .form-wrapper5
+        span.input-groop-title radio buttons
+      +radio-buttons({
+        labelTitle: 'RADIO BUTTONS',
+        radioButtonsSet: 'radio-buttons-test',
+        buttonsList: [
+          {
+            title: 'Мужчина',
+            value: '1',
+            checked: true
+          },
+          {
+            title: 'Женщина',
+            value: '2'
+          }
+        ]
+      })
+    .form-grid-column-10
+      .form-wrapper5
+        span.input-groop-title toggle
+      +toggle('Получать спецпредложения')
+      +toggle('Получать спецпредложения')
+    .form-grid-column-10
+      .form-wrapper5
+        span.input-groop-title like button
+      .form-grid-row5
+        +like-button({
+          num: '2'
+        })
+        +like-button({
+          num: '12'
+        })
+    .form-grid-column-10
+      .form-wrapper5
+        span.input-groop-title rate button
+      .form-grid-row
+        include ../../blocks/rate/rate
+        include ../../blocks/rate/rate
 
-  .third-container
-   +comment({
-     image: 'cadr.png',
-     tophead: 'Мурад Сарафанов',
-     bottomtext: '5 дней назад',
-     text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.',
-     num: '12'
-   })
+  .form-elements-comment-container
+    +comment({
+      image: 'cadr.png',
+      tophead: 'Мурад Сарафанов',
+      bottomtext: '5 дней назад',
+      text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.',
+      num: '12'
+    })
+
+  .form-elements-button-container
+    .grid-tabel
+      +btn('click me', 'theme-main')(href="/mocke me")
+      +btn('click me', 'theme-main')(href="/mocke me")
+      .rounded-corners-gradient-borders
+        +btn('click me', 'theme-secondary')(href="/mocke me")
+      .rounded-corners-gradient-borders
+        +btn('click me', 'theme-secondary')(href="/mocke me")
+      +btn('click me', 'theme-text')(href="/mocke me")
+      +btn('click me', 'theme-text')(href="/mocke me")
+    .grid-tabel-big
+      +btn('перейти к оплате', 'theme-main', true)
+
 
 
 
