--- a/src/theme/vars.scss
+++ b/src/theme/vars.scss
@@ -8,7 +8,7 @@ html {
   --third-font: Quicksand-Bold;
   --fifth-font: Material-Icon;
   --six-font: Font Awsome;
-  --color-primary: 31, 32, 65;
+  --default-color: 31, 32, 65;
   --purple: #bc9cff;
   --blue: #8ba4f9;
   --color7: #6fcf97;
@@ -22,7 +22,7 @@ html {
   --text-base-size: 1em;
   --text-scale-ratio: 1.1418;
   --text-xs: calc((1em / var(--text-scale-ratio)) / var(--text-scale-ratio));
-  --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
+  --text-sm: calc(var(--text-xs) * var(--text-scale-ratio)); //12px
   --text-md: calc(
     var(--text-sm) * var(--text-scale-ratio) * var(--text-scale-ratio)
   );
