--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -199,6 +199,7 @@ label:focus {
   justify-content: start;
   grid-row-gap: 33px;
 }
-.grid-tabel-big {
-  width: 100%;
-}
+//.form-wrapper10 {
+//  width: 100%;
+//  margin-bottom: 20px;
+//}
