--- a/src/blocks/calendar/calendar.scss
+++ b/src/blocks/calendar/calendar.scss
@@ -124,7 +124,7 @@
   //  background: transparent;
   //  border: 0;
   //  outline: 0;
-  //  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
+  //  -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=1)';
   //  filter: alpha(opacity=1);
   //  opacity: 0.01;
   //}
