--- a/src/blocks/calendar/some.scss
+++ b/src/blocks/calendar/some.scss
@@ -332,7 +332,7 @@
 //.date-picker-wrapper.single-month .time {
 //  display: block;
 //}
-//.date-picker-wrapper .time input[type="range"] {
+//.date-picker-wrapper .time input[type='range'] {
 //  vertical-align: middle;
 //  width: 129px;
 //  padding: 0;
@@ -391,7 +391,7 @@
 //  filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3));
 //}
 //.date-picker-wrapper .date-range-length-tip:after {
-//  content: "";
+//  content: '';
 //  position: absolute;
 //  border-left: 4px solid rgba(0, 0, 0, 0);
 //  border-right: 4px solid rgba(0, 0, 0, 0);
