--- a/src/theme/vars.scss
+++ b/src/theme/vars.scss
@@ -11,7 +11,7 @@ html {
   --default-color: 31, 32, 65;
   --purple: #bc9cff;
   --blue: #8ba4f9;
-  --color7: #6fcf97;
+  --green: #6fcf97;
   --white: #fff;
 
   --opasity-075: 0.75;
