--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -20,7 +20,9 @@
   position: absolute;
   top: 1000px;
 }
-
+.range-slider-wrapper {
+  width: 266px;
+}
 //.checkbox-wrapper:last-child {
 //  display: inline-flex;
 //}
