--- a/src/blocks/info/info.pug
+++ b/src/blocks/info/info.pug
@@ -14,7 +14,7 @@ mixin info(info)
 mixin icon-info(info)
  .icon-info
   .icon-info-left
-   span.material-icons= info.righthead
+   span.material-icons.mod= info.righthead
   .icon-info_right
    .info_number= info.tophead
    .info_bottom-text= info.bottomtext
