--- a/src/layout/checkbox-list/checkbox-list.pug
+++ b/src/layout/checkbox-list/checkbox-list.pug
@@ -1,10 +1,10 @@
 include ../../blocks/checkbox/checkbox
 
 form(method='post' name='singhup' id='singhup')
- fieldset.dropdown
+ fieldset.checkbox-dropdown
   input.dropdown-selector(type="checkbox")
   legend.dropdown-caption expandable checkbox list
-  .dropdown-content
+  .checkbox-dropdown-content
    li
     +checkbox('Завтрак')
    li
