--- a/src/layout/dropdown/dropdown.pug
+++ b/src/layout/dropdown/dropdown.pug
@@ -1,18 +1,27 @@
 include ../../blocks/input/input
-.l-container
- form(id="#drop", action=" ", method="get")
-  .custom.iqdropdown
-   p.iqdropdown-selection
-   .iqdropdown-menu
-    .iqdropdown-menu-option#one(data-id='adult' data-defaultcount='0' data-mincount='0')
-     div
-      p.iqdropdown-item.adult взрослые
-    .iqdropdown-menu-option(data-id='minor' data-defaultcount='0' data-mincount='0')
-     div
-      p.iqdropdown-item.minor дети
-    .iqdropdown-menu-option(data-id='infant')
-     div
-      p.iqdropdown-item.infant младенцы
-    div.button-wrapper
-     input(type="reset", value="очистить")
-     button(type="button").iqdropdown-menu-close применить
+.dropdown.absolute(wordforms='Гость Гостя Гостей' default='Сколько гостей?')
+ .dropdown__name Сколько гостей?
+ .dropdown-list
+  .dropdown-list__item(name='adult' default='2') Взрослые
+  .dropdown-list__item(name='child' default='1') Дети
+  .dropdown-list__item(name='babes') Младенцы
+//.dropdown.absolute(several-word-forms='' default='Сколько спален и кроватей?')
+// .dropdown__name  Сколько спален и кроватей?
+// .dropdown-list
+//  .dropdown-list__item(wordforms='Спальня Спальни Спален' name='rooms' default='2') Спальни
+//  .dropdown-list__item(wordforms='Кровать Кровати Кроватей' name='beds' default='2')Кровати
+//  .dropdown-list__item(name='bath') Ванные комнаты
+//.dropdown.active
+// #drop.dropdown__name Dropdown
+// .dropdown-list
+//  .dropdown-list__item item 1
+//  .dropdown-list__item item 2
+//  .dropdown-list__item item 3
+//  .dropdown-list__item item 4
+//.dropdown
+// #drop.dropdown__name Dropdown
+// .dropdown-list
+//  .dropdown-list__item item 1
+//  .dropdown-list__item item 2
+//  .dropdown-list__item item 3
+//  .dropdown-list__item item 4
