--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -14,6 +14,8 @@
 
   &_theme-text {
     color: var(--purple);
+    border: none;
+    padding: 0;
   }
   &_theme-text:hover,
   &_theme-text:focus {
