--- a/src/layout/main/main.pug
+++ b/src/layout/main/main.pug
@@ -1,21 +1,19 @@
 block variables
-
 doctype html
 html(lang='ru')
   head
     meta(charset='utf-8')
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
-
-    title(lang='eng') Toxin
+    title Toxin
     block head
 
   body(class=pageClass)
     h1.site-name Отель TOXIN
     include ../headers/pages-header/pages-header
-  block content
-  include ../pages-footer/pages-footer
+    block content
+
+
 
 
 
