--- a/src/pages/galery/galery.pug
+++ b/src/pages/galery/galery.pug
@@ -1,155 +1,262 @@
 extends ../../layout/main/main
 include ../../blocks/info/info
 include ../../layout/cards/cards
+include ../../blocks/toggle/toggle
+include ../../blocks/radio/radio
+include ../../blocks/checkbox/checkbox
+include ../../blocks/like-button/like-button
+include ../../blocks/input/input
+include ../../blocks/info/info
+include ../../layout/comment/comment
+include ../../blocks/button/button
+include ../../blocks/rate/rate
+include ../../layout/dropdown/mix
 block variables
- - let pageClass = 'galery-page';
- - let containerName = 'galery-container'
+  - let pageClass = 'galery-page';
+  - let containerName = 'galery-container'
 block content
- main.cont
-  //h2 Номера, которые мы для вас подобрали
-  section.filter
-  section.card-galery
-   +card({
-     image1: 'room-350-1.jpg',
-     image2: 'room-350-2.jpg',
-     image3: 'room-350-3.jpg',
-     image4: 'room-350-4.jpg',
-     righthead:'№ 888 люкс',
-     price: '9 990₽',
-     tophead: ' в сутки',
-     bottomhead:'145 Отзывов',
-     starName: 'cards-star1',
-     linkToRoom: 'room-details.html'
-   })
-   +card({
-     image1: 'room-352-1.jpg',
-     image2: 'room-352-2.jpg',
-     image3: 'room-352-3.jpg',
-     image4: 'room-352-4.jpg',
-     righthead: '№ 888 люкс',
-     tophead: '9 990₽ в сутки',
-     bottomhead: '145 Отзывов',
-     starName: 'cards-star2',
-     linkToRoom: 'room-details.html'
+  main.cont
+    //h2 Номера, которые мы для вас подобрали
+    section.filter
+      .form-wrapper20
+        div.dinamic-calendar
+          div.search-form-input-wrapper
+            label(class="form-label" for="#calendar1") date Dropdown
+            +input-field({
+              type: 'text',
+              placeholder: 'ДД.ММ.ГГГГ',
+              mods: 'calendar-one',
+              id: "calendar1"
+            })
+          div.search-form-input-wrapper
+            label(class="form-label" for="#calendar2") date Dropdown
+            +input-field({
+              type: 'text',
+              placeholder: 'ДД.ММ.ГГГГ',
+              mods: 'calendar-two',
+              id: "calendar2"
+            })
 
-   })
-   +card({
-     image1: 'room-444-1.jpg',
-     image2: 'room-444-2.jpg',
-     image3: 'room-444-3.jpg',
-     image4: 'room-444-4.jpg',
-     righthead: '№ 888 люкс',
-     tophead: '9 990₽ в сутки',
-     bottomhead: '145 Отзывов',
-     starName: 'cards-star3',
-     linkToRoom: 'room-details.html'
+      .form-wrapper30
+        label.form-label(for='three') dropdown
+        +dropdown({
+          mods: 'absolute, active',
+          defaultFieldTitle: 'Сколько гостей',
+          dropdownList: [
+            {
+              name: 'adult',
+              default: '2',
+              title: 'Взрослые',
+              wordforms: 'Гость Гостя Гостей'
+            },
+            {
+              name: 'child',
+              default: '2',
+              title: 'Дети',
+              wordforms: 'Гость Гостя Гостей'
 
-   })
-   +card({
-     image1: 'room-450-1.jpg',
-     image2: 'room-450-2.jpg',
-     image3: 'room-450-3.jpg',
-     image4: 'room-450-4.jpg',
-     righthead: '№ 888 люкс',
-     tophead: '9 990₽ в сутки',
-     bottomhead: '145 Отзывов',
-     starName: 'cards-star4',
-     linkToRoom: 'room-details.html'
+            },
+            {
+              name: 'babes',
+              default: '2',
+              title: 'Младенцы',
+              wordforms: 'Гость Гостя Гостей'
+            }
+          ]
+        })
+      .form-wrapper40
+        .short-width-wrapper
+          .form-flex-row
+            label.form-label(for='nine') Range Slider
+            .extra-controls
+              input.js-input-from(type='text' value='0')
+              span.range-slider-tire -
+              input.js-input-to(type='text' value='0')
+          include ../../blocks/range-slider/range-slider
 
-   })
-   +card({
-     image1: 'room-666-1.jpg',
-     image2: 'room-666-2.jpg',
-     image3: 'room-666-3.jpg',
-     image4: 'room-666-4.jpg',
-     righthead: '№ 888 люкс',
-     tophead: '9 990₽ в сутки',
-     bottomhead: '145 Отзывов',
-     starName: 'cards-star5',
-     linkToRoom: 'room-details.html'
-   })
-   +card({
-     image1: 'room-678-1.jpg',
-     image2: 'room-678-2.jpg',
-     image3: 'room-678-3.jpg',
-     image4: 'room-678-4.jpg',
-     righthead: '№ 888 люкс',
-     tophead: '9 990₽ в сутки',
-     bottomhead: '145 Отзывов',
-     starName: 'cards-star6',
-     linkToRoom: 'room-details.html'
 
-   })
-   +card({
-     image1: 'room-740-1.jpg',
-     image2: 'room-740-2.jpg',
-     image3: 'room-740-3.jpg',
-     image4: 'room-740-4.jpg',
-     righthead: '№ 888 люкс',
-     tophead: '9 990₽ в сутки',
-     bottomhead: '145 Отзывов',
-     starName: 'cards-star8',
-     linkToRoom: 'room-details.html'
 
-   })
-   +card({
-     image1: 'room-840-1.jpg',
-     image2: 'room-840-2.jpg',
-     image3: 'room-840-3.jpg',
-     image4: 'room-840-4.jpg',
-     righthead: '№ 888 люкс',
-     tophead: '9 990₽ в сутки',
-     bottomhead: '145 Отзывов',
-     starName: 'cards-star9',
-     linkToRoom: 'room-details.html'
+      .form-wrapper30
+        .form-grid-column-10
+          .form-wrapper5
+            span.input-groop-title checkbox buttons
+          +checkbox('Можно курить')
+          +checkbox('Можно с питтомцами')
+          +checkbox('Можно пригласить гостей (до 10 человек)')
 
-   })
-   +card({
-     image1: 'room-856-1.jpg',
-     image2: 'room-856-2.jpg',
-     image3: 'room-856-3.jpg',
-     image4: 'room-856-4.jpg',
-     righthead: '№ 888 люкс',
-     tophead: '9 990₽ в сутки',
-     bottomhead: '145 Отзывов',
-     starName: 'cards-star10',
-     linkToRoom: 'room-details.html'
+      .form-wrapper20
+        .form-flex-row
+          label.form-label(for='three') Удобство номера
+        +dropdown({
+          mods: 'absolute, active',
+          defaultFieldTitle: 'Сколько спален и кроватей',
+          dropdownList: [
+            {
+              name: 'rooms',
+              default: '2',
+              title: 'Спальни',
+              wordforms: 'Спальня Спальни Спален',
+            },
+            {
+              name: 'beds',
+              default: '2',
+              title: 'Кровати',
+              wordforms: 'Кровать Кровати Кроватей',
+            },
+            {
+              name: 'bath',
+              default: '2',
+              title: 'Ванные комнаты'
+            }
+          ]
+        })
 
-   })
-   +card({
-     image1: 'room-888-1.jpg',
-     image2: 'room-888-2.jpg',
-     image3: 'room-888-3.jpg',
-     image4: 'room-888-4.jpg',
-     righthead: '№ 888 люкс',
-     tophead: '9 990₽ в сутки',
-     bottomhead: '145 Отзывов',
-     starName: 'cards-star11',
-     linkToRoom: 'room-details.html'
+      include ../../layout/checkbox-list/checkbox-list
 
-   })
-   +card({
-     image1: 'room-980-1.jpg',
-     image2: 'room-980-2.jpg',
-     image3: 'room-980-3.jpg',
-     image4: 'room-980-4.jpg',
-     righthead: '№ 888 люкс',
-     tophead: '9 990₽ в сутки',
-     bottomhead: '145 Отзывов',
-     starName: 'cards-star12',
-     linkToRoom: 'room-details.html'
 
-   })
-   +card({
-     image1: 'room-982-1.jpg',
-     image2: 'room-982-2.jpg',
-     image3: 'room-982-3.jpg',
-     image4: 'room-982-4.jpg',
-     righthead: '№ 888 люкс',
-     tophead: '9 990₽ в сутки',
-     bottomhead: '145 Отзывов',
-     starName: 'cards-star13',
-     linkToRoom: 'room-details.html'
-   })
+
+    section.card-galery
+      +card({
+        image1: 'room-350-1.jpg',
+        image2: 'room-350-2.jpg',
+        image3: 'room-350-3.jpg',
+        image4: 'room-350-4.jpg',
+        righthead: '№ 888 люкс',
+        price: '9 990₽',
+        tophead: ' в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star1',
+        linkToRoom: 'room-details.html'
+      })
+      +card({
+        image1: 'room-352-1.jpg',
+        image2: 'room-352-2.jpg',
+        image3: 'room-352-3.jpg',
+        image4: 'room-352-4.jpg',
+        righthead: '№ 888 люкс',
+        tophead: '9 990₽ в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star2',
+        linkToRoom: 'room-details.html'
+
+      })
+      +card({
+        image1: 'room-444-1.jpg',
+        image2: 'room-444-2.jpg',
+        image3: 'room-444-3.jpg',
+        image4: 'room-444-4.jpg',
+        righthead: '№ 888 люкс',
+        tophead: '9 990₽ в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star3',
+        linkToRoom: 'room-details.html'
+
+      })
+      +card({
+        image1: 'room-450-1.jpg',
+        image2: 'room-450-2.jpg',
+        image3: 'room-450-3.jpg',
+        image4: 'room-450-4.jpg',
+        righthead: '№ 888 люкс',
+        tophead: '9 990₽ в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star4',
+        linkToRoom: 'room-details.html'
+
+      })
+      +card({
+        image1: 'room-666-1.jpg',
+        image2: 'room-666-2.jpg',
+        image3: 'room-666-3.jpg',
+        image4: 'room-666-4.jpg',
+        righthead: '№ 888 люкс',
+        tophead: '9 990₽ в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star5',
+        linkToRoom: 'room-details.html'
+      })
+      +card({
+        image1: 'room-678-1.jpg',
+        image2: 'room-678-2.jpg',
+        image3: 'room-678-3.jpg',
+        image4: 'room-678-4.jpg',
+        righthead: '№ 888 люкс',
+        tophead: '9 990₽ в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star6',
+        linkToRoom: 'room-details.html'
+
+      })
+      +card({
+        image1: 'room-740-1.jpg',
+        image2: 'room-740-2.jpg',
+        image3: 'room-740-3.jpg',
+        image4: 'room-740-4.jpg',
+        righthead: '№ 888 люкс',
+        tophead: '9 990₽ в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star8',
+        linkToRoom: 'room-details.html'
+
+      })
+      +card({
+        image1: 'room-840-1.jpg',
+        image2: 'room-840-2.jpg',
+        image3: 'room-840-3.jpg',
+        image4: 'room-840-4.jpg',
+        righthead: '№ 888 люкс',
+        tophead: '9 990₽ в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star9',
+        linkToRoom: 'room-details.html'
+
+      })
+      +card({
+        image1: 'room-856-1.jpg',
+        image2: 'room-856-2.jpg',
+        image3: 'room-856-3.jpg',
+        image4: 'room-856-4.jpg',
+        righthead: '№ 888 люкс',
+        tophead: '9 990₽ в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star10',
+        linkToRoom: 'room-details.html'
+
+      })
+      +card({
+        image1: 'room-888-1.jpg',
+        image2: 'room-888-2.jpg',
+        image3: 'room-888-3.jpg',
+        image4: 'room-888-4.jpg',
+        righthead: '№ 888 люкс',
+        tophead: '9 990₽ в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star11',
+        linkToRoom: 'room-details.html'
+
+      })
+      +card({
+        image1: 'room-980-1.jpg',
+        image2: 'room-980-2.jpg',
+        image3: 'room-980-3.jpg',
+        image4: 'room-980-4.jpg',
+        righthead: '№ 888 люкс',
+        tophead: '9 990₽ в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star12',
+        linkToRoom: 'room-details.html'
+
+      })
+      +card({
+        image1: 'room-982-1.jpg',
+        image2: 'room-982-2.jpg',
+        image3: 'room-982-3.jpg',
+        image4: 'room-982-4.jpg',
+        righthead: '№ 888 люкс',
+        tophead: '9 990₽ в сутки',
+        bottomhead: '145 Отзывов',
+        starName: 'cards-star13',
+        linkToRoom: 'room-details.html'
+      })
 
 
